metadata1/unpackaged/objects/ATI_Job__c.object
<CustomObject>
    <fields>
        <fullName>AE_1_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE 1 Bonus</label>
        <referenceTo>AE_Bonus__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>ATIAEBonus1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_1_percentage__c</fullName>
        <description>This percentage field is populated via Process Builder &apos;Opportunity Split percentage population&apos; flow to note what revenue percentage is allotted to the Account Executive 1 user.  Only Account Executives with a percentage value over 0 will be sent to Timberline.</description>
        <label>AE 1 percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AE_2_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE 2 Bonus</label>
        <referenceTo>AE_Bonus__c</referenceTo>
        <relationshipLabel>Jobs (AE 2 Bonus)</relationshipLabel>
        <relationshipName>ATIAEBonus2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_2_percentage__c</fullName>
        <description>This percentage field is populated via Process Builder &apos;Opportunity Split percentage population&apos; flow to note what revenue percentage is allotted to the Account Executive 2 user.  Only Account Executives with a percentage value over 0 will be sent to Timberline.</description>
        <label>AE 2 percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AE_Base_Name2__c</fullName>
        <formula>IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c = &apos;&apos;),Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName,IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c != &apos;&apos;),Account_Executive_2__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_2__r.LastName, Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Base Name2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Base_Name__c</fullName>
        <description>This formula field is to list all AE 1 Name</description>
        <formula>IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c = &apos;&apos;),Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName,IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c != &apos;&apos;),Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName, Account_Executive_2__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_2__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Base Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Logic__c</fullName>
        <description>Used in Jitterbit mapping to send to Timberline.</description>
        <formula>if( Account_Executive_1__r.Id = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATI_Contractor_Status__c</fullName>
        <label>Prime/Sub/JV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Sub</fullName>
                </value>
                <value>
                    <fullName>JV Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATI_Phone_Number__c</fullName>
        <defaultValue>&quot;(714)283-9990&quot;</defaultValue>
        <label>ATI Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_1_Timber__c</fullName>
        <description>Field used in Jitterbit mapping to sync with Timberline to indicate the primary Account Executive related to the Job.</description>
        <formula>if(!ISBLANK(Account_Executive_1__r.LastName), Account_Executive_1__r.LastName &amp; if(!ISBLANK(Account_Executive_1__r.FirstName ), &quot;, &quot; &amp; Account_Executive_1__r.FirstName,&quot;&quot; ) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive 1 Timber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field populated by trigger from the Opportunity&apos;s associated Contact record&apos;s Owner lookup field to indicate the Account Executive involved in the Opportunity. The purpose of this field is to allow for this value to be sent to Timberline easily without having to integrate with &apos;Opportunity Team&apos; separate object.</description>
        <label>Account Executive 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATIJOBSAE1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2_Timber__c</fullName>
        <description>Field used in Jitterbit mapping to sync with Timberline to indicate the secondary Account Executive related to the Job.</description>
        <formula>if(!ISBLANK(Account_Executive_2__r.LastName), Account_Executive_2__r.LastName &amp; if(!ISBLANK(Account_Executive_2__r.FirstName ), &quot;, &quot; &amp; Account_Executive_2__r.FirstName,&quot;&quot; ) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive 2 Timber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field populated by trigger from the Opportunity&apos;s associated Account record&apos;s Owner lookup field to indicate the secondary Account Executive involved in the Opportunity. The purpose of this field is to allow for this value to be sent to Timberline easily without having to integrate with &apos;Opportunity Team&apos; separate object.</description>
        <label>Account Executive 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATIJOBSAE2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>Account_Executive__c</referenceTo>
        <relationshipLabel>ATI Jobs</relationshipLabel>
        <relationshipName>ATI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account does not exist or has been rejected.</errorMessage>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Rejected</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Rejected</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ATI Jobs</relationshipLabel>
        <relationshipName>ATI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_JTD_NM_RS__c</fullName>
        <label>Actual Gross Profit % (JTD-NM)</label>
        <summarizedField>Financial__c.Actual_Gross_Profit_JTD_NM__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Job_Completion_Date__c</fullName>
        <description>Program field</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Actual Job Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>for managed repair programs</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Correct_Email__c</fullName>
        <description>This field allows users to add or change an email address on the related Contact record from the Opportunity record.  This field is referenced by &apos;EmailUpdateOnJob&apos; trigger.</description>
        <label>Add/Correct Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( OR(ISPICKVAL( Stage__c , &apos;Won&apos; ),ISPICKVAL( Stage__c , &apos;lost&apos;)) , CloseDate__c, TODAY()) - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name/Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>End_User_Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Human Services</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Justice</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Veterans Affairs</fullName>
                </value>
                <value>
                    <fullName>US Postal Service</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>City/Township</fullName>
                </value>
                <value>
                    <fullName>Port District</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
                <value>
                    <fullName>K-12 School</fullName>
                </value>
                <value>
                    <fullName>Community College</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Trade School</fullName>
                </value>
                <value>
                    <fullName>Daycare (non-private)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_not_billed__c</fullName>
        <formula>Amount__c - Job_to_Date_Work_Billed_RS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount not billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>Indicator of the Admin Manager that approved the Job-- populated via &apos;Job Approval Process&apos; Final Approval Action Field Update.</description>
        <label>Approved By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date that Insurance approved estimate for repair.  Managed Repair Program Admin to update.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_Time_to_Close__c</fullName>
        <description>Average time it takes to complete an opportunity/job-- Complete Date minus Job Start Date</description>
        <formula>Completion_Date__c  - DATEVALUE(Job_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BigTimeSID__c</fullName>
        <label>BigTime SID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigTime_Last_Sync__c</fullName>
        <label>BigTime Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BigTime_Status__c</fullName>
        <label>BigTime Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Complete_Count__c</fullName>
        <description>Job Stage Count when stage is Billing Complete</description>
        <formula>IF(ISPICKVAL( Stage__c ,&quot;Billing Complete&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Complete Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Complete_Date__c</fullName>
        <description>Date/Time field to record when the job is updated to Billing Complete stage for reporting purposes.</description>
        <label>Billing Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to note the Branch Manager that will need to assign a PM to the job.</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATIJobBM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to note when a Superintendent has completed a budget form related to the job.</description>
        <label>Budget Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Created</fullName>
                    <default>true</default>
                    <label>Not Created</label>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if a building consultant is involved in this job. This will alert all the job assignee.</inlineHelpText>
        <label>Building Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Development_Manager__c</fullName>
        <description>This field is used for reporting on BDM.</description>
        <formula>IF(NOT(ISBLANK(Account_Executive_1__c)), Account_Executive_1__r.FirstName +&quot; &quot;+ Account_Executive_1__r.LastName,&quot;&quot;)+BR() + 

IF(NOT(ISBLANK(Account_Executive_2__c)), Account_Executive_2__r.FirstName +&quot; &quot;+ Account_Executive_2__r.LastName, &quot;&quot;)</formula>
        <label>Business Development Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ATI Jobs</relationshipLabel>
        <relationshipName>ATI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <description>Project Site Contact&apos;s cell phone from Contact record</description>
        <formula>Project_Site_Contact_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_LA_Timber__c</fullName>
        <description>Code to indicate Yes/No of referenced &apos;City of LA&apos; picklist, used in Jitterbit mapping to send on to Timberline.</description>
        <formula>if( ISPICKVAL(City_of_LA__c , &apos;Yes&apos;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City of LA Timber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_of_LA__c</fullName>
        <description>Indicator of whether a Job is located in the city of LA.  Required in New Job VF page.</description>
        <label>City of LA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <description>Field to indicate claim number for jobs that will be covered by insurance.</description>
        <label>Claim #</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <description>Collector from Project Managers User record</description>
        <formula>IF(AND( ISPICKVAL( Lead_Source__c , &apos;National Account (ERA, Contract, Etc)&apos;),  Default_Collector__c  &lt;&gt; TRUE) , &apos;Cassandra ONeill&apos;,
IF(AND( Default_Collector__c  &lt;&gt; TRUE, OR (ISPICKVAL( Lead_Source__c , &apos;Program - Lionsbridge&apos;),ISPICKVAL( Lead_Source__c , &apos;Program - Alacrity Services&apos;))), &apos;Alicia Sierra&apos;, 
IF (Default_Collector__c   =  TRUE,  Project_Manager__r.Collector__r.FirstName &amp; &quot; &quot; &amp; Project_Manager__r.Collector__r.LastName , Project_Manager__r.Collector__r.FirstName &amp; &quot; &quot; &amp; Project_Manager__r.Collector__r.LastName ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>This is ATI company name for use in the Prelim Report.</description>
        <formula>$User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belfor</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Restoration</fullName>
                </value>
                <value>
                    <fullName>BMS Cat</fullName>
                </value>
                <value>
                    <fullName>Coit</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>DKI</fullName>
                </value>
                <value>
                    <fullName>Northstar</fullName>
                </value>
                <value>
                    <fullName>Polygon</fullName>
                </value>
                <value>
                    <fullName>Harbro</fullName>
                </value>
                <value>
                    <fullName>Interstate Restoration</fullName>
                </value>
                <value>
                    <fullName>Miller</fullName>
                </value>
                <value>
                    <fullName>Serv-Pro</fullName>
                </value>
                <value>
                    <fullName>Service Master</fullName>
                </value>
                <value>
                    <fullName>Paul Davis Systems</fullName>
                </value>
                <value>
                    <fullName>PW Stevens</fullName>
                </value>
                <value>
                    <fullName>Puroclean</fullName>
                </value>
                <value>
                    <fullName>NCRI-National Catastrophe Restoration</fullName>
                </value>
                <value>
                    <fullName>Rainbow International</fullName>
                </value>
                <value>
                    <fullName>RMC Group, LLC</fullName>
                </value>
                <value>
                    <fullName>Steamatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date that the Job&apos;s Stage is set to Complete</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Month__c</fullName>
        <formula>CASE(MONTH( Completion_Date__c ), 1, &quot;01-January&quot;, 2, &quot;02-February&quot;, 3, &quot;03-March&quot;,  4, &quot;04-April&quot;,  5, &quot;05-May&quot;,  6, &quot;06-June&quot;, 7, &quot;07-July&quot;, 8, &quot;08-August&quot;, 9, &quot;09-September&quot;, 10, &quot;10-October&quot;, 11, &quot;11-November&quot;, 12, &quot;12-December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Year__c</fullName>
        <formula>YEAR ( Completion_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_minus_Estimate_Date__c</fullName>
        <description>Completion Date minus Date Taken</description>
        <formula>Completion_Date__c  -  Date_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion - Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATI_Jobs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Division_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gives credit to consulting division for referral</description>
        <label>Consulting Division Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cont_P_O_Client_Job__c</fullName>
        <label>Cont. P.O./ Client Job #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <formula>IF(ISBLANK(Contact__c)=true, &quot;&quot;, 

if(Contact__r.IsPersonAccount = true, (Contact__r.Account.BillingStreet +&quot;, &quot;+ Contact__r.Account.BillingCity +&quot;, &quot;+ Contact__r.Account.BillingState +&quot; &quot;+ Contact__r.Account.BillingPostalCode &amp; BR() &amp; 
Contact__r.Account.Phone +&quot; Work &quot; &amp; BR() &amp; Contact__r.MobilePhone +&quot; Mobile &quot; &amp; BR() &amp; 
Contact__r.Email), 
(Contact__r.MailingStreet +&quot;, &quot;+ Contact__r.MailingCity +&quot;, &quot;+ Contact__r.MailingState +&quot; &quot;+ Contact__r.MailingPostalCode &amp; BR() &amp; 
Contact__r.Phone +&quot; Work &quot; &amp; BR() &amp; Contact__r.MobilePhone +&quot; Mobile &quot; &amp; BR() &amp; 
Contact__r.Email)))</formula>
        <inlineHelpText>Information is carried over from Contact&apos;s Mailing Address.</inlineHelpText>
        <label>Contact Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to link the primary Contact of the Job to the Opportunity</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs (Contact)</relationshipLabel>
        <relationshipName>ATIContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractId</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>ATI Jobs</relationshipLabel>
        <relationshipName>ATI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cooperative__c</fullName>
        <label>Cooperative</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Purchasing_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BuyBoard</fullName>
                </value>
                <value>
                    <fullName>TIPS</fullName>
                </value>
                <value>
                    <fullName>TXMAS</fullName>
                </value>
                <value>
                    <fullName>US Communities</fullName>
                </value>
                <value>
                    <fullName>TIPS Trades</fullName>
                </value>
                <value>
                    <fullName>TIPS Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>SETX</fullName>
                </value>
                <value>
                    <fullName>MHEC</fullName>
                </value>
                <value>
                    <fullName>Choice Partners</fullName>
                </value>
                <value>
                    <fullName>CMAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CopyPMToOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CopyPMToOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <defaultValue>&quot;1000&quot;</defaultValue>
        <description>Field to indicate Cost Code-- default to 1000</description>
        <label>Cost Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_for_Jobs_25_GP__c</fullName>
        <formula>IF(Actual_Gross_Profit_JTD_NM_RS__c &gt; 0.25, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count for Jobs &gt; 25% GP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Job Project Site County-- used in Jitterbit mapping to sync with Timberline.</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Request_Status__c</fullName>
        <description>Status set in Credit Request Approval Process</description>
        <label>Credit Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Request_Submitter_Email__c</fullName>
        <description>Credit Request submitter email population</description>
        <label>Credit Request Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_GP__c</fullName>
        <description>This calculates current GP% based on Amount field</description>
        <formula>( Amount__c -  Job_to_Date_Costs_Next_Month_Costs_RS__c )/  Amount__c</formula>
        <label>Current GP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted__c</fullName>
        <description>Date when PD makes the first contact with the Customer.  Managed Repair Program Admin to enter.</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Customer Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ATI Jobs (Customer)</relationshipLabel>
        <relationshipName>ATI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Set__c</fullName>
        <formula>CASE(
Job_Class__c,
&quot;Residential&quot;, &quot;Residential&quot;,
&quot;Multi-Family&quot;, &quot;Commercial&quot;,
&quot;Commercial&quot;, &quot;Commercial&quot;,
&quot;Retail&quot;, &quot;Commercial&quot;,
&quot;Educational&quot;, &quot;Commercial&quot;,
&quot;Healthcare&quot;, &quot;Commercial&quot;,
&quot;Hospitality&quot;, &quot;Commercial&quot;,
&quot;Manufacturing&quot;, &quot;Commercial&quot;,
&quot;Municipality/ Gov&apos;t&quot;, &quot;Commercial&quot;,
&quot;GSA&quot;, &quot;Commercial&quot;,
&quot;Religious&quot;, &quot;Commercial&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_24_HR_Report_Uploaded__c</fullName>
        <description>Program field</description>
        <label>Date 24-HR Report Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COS_Uploaded__c</fullName>
        <label>Date COS Uploaded</label>
        <type>Date</type>
    </fields>
</CustomObject>